--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
             <!-- Resume Button -->
             <li class="nav-item ms-2 js-scroll-trigger">
-              <a class="nav-link resume-btn" href="#">
+              <a class="nav-link resume-btn" href="resume.pdf">
                 <i class="fa-solid fa-download"></i>Download Resume
               </a>
             </li>
@@ -481,4 +481,5 @@
 
 
 </body>
+
 </html>
