--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 
 
   <!-- footer  -->
-<footer class="footer">
+<footer class="footer" id="contact">
   <div class="footer-container">
 
     <!-- Contact Form -->
@@ -483,3 +483,4 @@
 </body>
 
 </html>
+
